# rust-wio-terminal-exercise

./: README.md
ch00_minimamu_component/: Cargo.toml
ch00_minimamu_component/src/: main.rs
ch00_minimum_component/: Cargo.toml
ch00_minimum_component/src/: main.rs
ch03_p42_01_hello_world/: Cargo.toml
ch03_p42_01_hello_world/src/: main.rs
ch03_p42_02_hello_world/: Cargo.toml
ch03_p42_03_hello_world/: Cargo.toml
ch03_p42_03_hello_world/src/: main.rs
ch03_p42_hello_world/: Cargo.toml
ch04_p132_01_lchika/: Cargo.toml
ch04_p132_01_lchika/src/: main.rs
ch06_P221_01_buzzer/: Cargo.toml
ch06_P221_01_buzzer/.cargo/: config
ch06_P221_01_buzzer/src/: main.rs
ch06_p169_01_led_and_button/: Cargo.toml
ch06_p169_01_led_and_button/src/: main.rs
ch06_p169_02_led_and_button/: Cargo.toml
ch06_p169_02_led_and_button/src/: main.rs
ch06_p169_03_led_and_button/: Cargo.toml
ch06_p169_03_led_and_button/src/: main.rs
ch06_p184_01_uart/: Cargo.toml  README.md
ch06_p184_01_uart/src/: main.rs
ch06_p193_01_uart/: Cargo.toml  README.md
ch06_p193_01_uart/.cargo/: config
ch06_p193_01_uart/src/: main.rs
ch06_p229_01_light_sensor/: Cargo.toml
ch06_p229_01_light_sensor/src/: main.rs
ch06_p242_accelerometer/: Cargo.toml
ch06_p242_accelerometer/src/: main.rs
ch07_p253_01_draw_line/: Cargo.toml
ch07_p253_01_draw_line/src/: main.rs
ch08_p314_01_mic_fft/: Cargo.toml
ch08_p314_01_mic_fft/src/: main.rs
ch_00_minimamu_component/: Cargo.toml
clone_buttons/: Cargo.toml
clone_buttons/src/: main.rs
clone_ch08_p314_01_mic_fft/: Cargo.toml
clone_ch08_p314_01_mic_fft/src/: main.rs
clone_microphone/: Cargo.toml
clone_microphone/src/: main.rs
clone_usb_serial_01/: Cargo.toml  README.md
clone_usb_serial_01/src/: main.rs
ex_01_minimamu_component/: Cargo.toml
ex_grove_01/: Cargo.toml  README.md
ex_grove_01/src/: main.rs
ex_grove_02/: Cargo.toml  README.md
ex_grove_02/src/: main.rs
