[package]
name = "ch08_p314_01_mic_fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.6.1" # 必須クレート
panic-halt = "0.2" # 必須クレート
embedded-graphics = "0.7.1" # 描画関係
heapless = "0.7.16" # スタックだけ使用
micromath = "2.0.0" # 組込みRustで数学関数を使用する
cortex-m = "0.7.7"
