[package]
name = "ch08_p314_01_mic_fft"
version = "0.1.0"
edition = "2018" # 妥協

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.3"
panic-halt = "0.2"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "0.1"
accelerometer = "0.12.0"
embedded-graphics = "0.6.2"
heapless = "0.5.6"
microfft = "0.3.1"
micromath = "1.1.0"