[package]
name = "clone_usb_serial_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.6.1" # 必須クレート
panic-halt = "0.2" # 必須クレート
embedded-graphics = "0.7.1" # 最新の0.8.0だとdisplayを渡せない
heapless = "0.7.16" # ヒープ上のデータをスタックに置けるようにする
cortex-m = "0.7.7" # マイコンのドライバへのアクセス
usbd-serial = "0.1" # USB-シリアル通信
usb-device = "0.2" # USBデバイス
